# icoe

icoe/: .gitignore  LICENSE  README.md  pyproject.toml
icoe/.github/workflows/: publish.yml
icoe/examples/: demo_scenarios.ipynb  early_stopping_demo.ipynb  f1_metric_demo.ipynb
icoe/icoe/: engine.py  estimator.py  plotting.py  search_space.py  splitting.py  storage.py
icoe/tests/: reproduce_early_stopping.py  test_embargo_safety.py  test_engine.py  test_estimator.py  test_f1_metric.py  test_history_tuning.py  test_persistence.py  test_reproducibility.py  test_search_space.py  test_splitting.py  test_storage.py
icoe/tests/stress/: stress_test_leakage.py  stress_test_noise.py  stress_test_scale.py
