[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sim-icoe"
version = "0.1.0"
description = "Iterative Causal Optimization Engine - A robust feature selection engine compatibile with Scikit-Learn."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "ICOE Team"}
]
dependencies = [
    "numpy>=1.20",
    "pandas>=1.3",
    "scikit-learn>=1.0",
    "lightgbm>=3.0",
    "joblib>=1.0",
    "matplotlib>=3.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[project.urls]
"Homepage" = "https://github.com/mtvseven/sim-icoe"
"Bug Tracker" = "https://github.com/mtvseven/sim-icoe/issues"


[project.optional-dependencies]
dev = [
    "pytest",
    "flake8",
    "black"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["icoe*"]
